chore: Update front.js to fix wrapping issue in product names

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -50,6 +50,7 @@ p {
 
 .products > div h3 {
   font-weight: 800;
+  text-wrap: wrap;
 }
 
 .cart > div {
